# ModelViewExample

./: CMakeLists.txt  ListDelegate.qml  ListHighlight.qml  ModelViewExample.pro  README.md  dataentrymodel.cpp  dataentrymodel.h  main.cpp  main.qml  qml.qrc
